--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+}
+.search-form{
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+.search-input{
+  width: 50%;
+  border: none;
+  padding: 10px;
+}
+.search-input:focus{
+  border: none;
+}
+.search-button{
+  background: lightcoral;
+  border: none;
+  padding: 10px 20px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Recipes{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Recipe{
+  background: white;
+  display: flex;
+  flex-direction:column ;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 20px;
+  margin: 10px;
+  box-shadow:0px 5px 20px #9c9c9c;
+  min-width: 40%;
+}
+.image{
+  width: 25rem;
+  height: 25rem;
+  border-radius: 5px;
 }
